--- a/frontend/src/app/routes/pages/login/login.component.html
+++ b/frontend/src/app/routes/pages/login/login.component.html
@@ -2,20 +2,24 @@
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <h2>Iniciar Sesión</h2>
-      <!-- <mat-error *ngIf="form.controls['email'].errors">
-        The username and password were not recognized
-      </mat-error> -->
+
       <mat-form-field class="full-width-input">
         <input matInput placeholder="Correo" formControlName="email">
         <mat-error *ngIf="form.get('email').errors && form.get('email').errors.required">El correo es obligatorio</mat-error>
         <mat-error *ngIf="form.get('email').errors && form.get('email').errors.email">El correo no tiene un formato válido</mat-error>
         <mat-error *ngIf="form.get('email').errors && form.get('email').errors.serverError">{{ form.get('email').errors.serverError }}</mat-error>
       </mat-form-field>
+
       <mat-form-field class="full-width-input">
         <input matInput type="password" placeholder="Contraseña" formControlName="password">
         <mat-error *ngIf="form.get('password').errors && form.get('password').errors.required">La contraseña es obligatoria</mat-error>
         <mat-error *ngIf="form.get('password').errors && form.get('password').errors.serverError">{{ form.get('password').errors.serverError }}</mat-error>
       </mat-form-field>
+
+      <mat-error *ngIf="error">
+        {{ error }}
+      </mat-error>
+
       <button type="submit" [disabled]="disableSubmitBtn" mat-raised-button color="primary">INICIAR SESIÓN</button>
     </form>
   </mat-card-content>
